--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -13,6 +13,7 @@
     /* color: white; */
     -webkit-text-fill-color: white;
     -webkit-text-stroke: 1px rgb(57, 205, 16);
+    cursor: pointer;
 }
 #navbtn{
     /* height: 2rem; */
@@ -54,4 +55,11 @@ input{
 .i-am-already{
     margin-bottom: 1rem;
     color: rgb(28, 133, 162);
+    cursor: pointer;
 }
+.alreadyHaveAccount{
+    cursor: pointer;
+    color: rgb(28, 133, 162);
+}
+
+/* SectionContainer */
