--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -299,3 +299,10 @@ textarea {
     height: 100%;
     margin-top: 3rem;
 }
+
+/* Spinner */
+.spinner-wrapper{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
