--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -6,11 +6,14 @@
     margin: 0;
     padding: 0;
     font-family: 'Algrey';
+    /* overflow-x: hidden; */
 }
-body{
+
+body {
     max-width: 100%;
     overflow-x: hidden;
 }
+
 .myborder {
     border: 1px solid rgb(28, 133, 162);
 }
@@ -35,21 +38,15 @@ body{
 }
 
 .headerImg {
-    width: 100%;
-    height: 100%;
-    /* scale: 120%; */
-    object-fit: cover;
-    transform: translateX(-30vw);
-
+    width: 13rem;
+    height: 5rem;
 }
 
-.headingImgDiv {
-    width: 50vw;
-    height: 10vh;
-    margin-bottom: -2rem;
-}
+/* .headingImgDiv {
+    width: 2rem;
+} */
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
     .headerImg {
         transform: translateX(-20vw);
     }
@@ -57,7 +54,7 @@ body{
     .headingImgDiv {
         width: 70vw;
     }
-}
+} */
 
 /* signup */
 .form-title {
@@ -72,7 +69,7 @@ body{
 }
 
 .signwrapper {
-    margin-top: 4rem;
+    /* margin-top: 4rem; */
     border: 1px solid rgb(28, 133, 162);
 }
 
@@ -132,7 +129,7 @@ input::placeholder {
 }
 
 .wrapperSectionContainer {
-    margin-top: 3rem;
+    /* margin-top: 3rem; */
     /* height: ; */
     display: flex;
     flex-direction: column;
@@ -220,9 +217,10 @@ input::placeholder {
 
 /* Contact */
 .contactHead {
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     font-size: 2rem;
     font-weight: 500;
+    text-decoration: underline;
 }
 
 .contactDesc {
@@ -249,7 +247,7 @@ textarea {
 
 
 .footerContainer {
-    height: 26rem;
+    height: 25rem;
     /* margin-bottom: 2rem; */
 }
 
@@ -262,7 +260,7 @@ textarea {
 }
 
 .footerSecond {
-    height: 40vh;
+    /* height: 40vh;*/
     margin-bottom: 4rem;
 }
 
@@ -273,7 +271,7 @@ textarea {
 
 .footerSecond div img {
     height: 3.5rem;
-    transform: translateX(-10%);
+    /* transform: translateX(-10%); */
 }
 
 .inta,
@@ -284,9 +282,9 @@ textarea {
 
 .linked :hover,
 .inta :hover,
-.footerSecond div img:hover {
+.footerimg:hover {
     transform: scale(110%);
-    transition: ease 1s;
+    transition: ease 0.5s;
 }
 
 /* terms */
@@ -301,8 +299,21 @@ textarea {
 }
 
 /* Spinner */
-.spinner-wrapper{
+.spinner-wrapper {
     display: flex;
     justify-content: center;
     align-content: center;
+}
+
+/* Individual */
+
+.adjustCellWrapper{
+    display: grid;
+    grid-template-columns: 20% 16% 24% 25% 15%;
+}
+.adjustCell{
+    padding-left: 5px;
+}
+.cell{
+    font-size: 0.9rem;
 }
